Fixed css spacing

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ h3 {
   margin: 0;
 }
 
-h4, .menu__heading a{
+h4, .menu__heading a {
   font-family: var(--font-serif);
   color: var(--mid-gray);
   font-size: 3rem;
@@ -259,7 +259,7 @@ a:hover .transform-arrow {
   font-size: 1.2rem;
 }
 
-.side-bar__section {
+.sidebar__section {
   margin: 2rem 0;
 }
 
@@ -270,7 +270,7 @@ a:hover .transform-arrow {
     position: relative;
     overflow: hidden;
   }
-  .side-bar__section {
+  .sidebar__section {
     display: none;
   }
   .component__main {
@@ -337,7 +337,7 @@ a:hover .transform-arrow {
   position: relative;
 }
 
-.hero__img img{
+.hero__img img {
   width: 100%;
   height: auto;
   object-fit: cover;
@@ -540,7 +540,7 @@ a:hover .transform-arrow {
   align-self: flex-end;
 }
 
-.app-section__img img{
+.app-section__img img {
   width: 100%;
   height: 100%; 
   object-fit: contain;
@@ -634,7 +634,7 @@ a:hover .transform-arrow {
   justify-content: space-between;
 }
 
-.latest-header{
+.latest-header {
   font-size: 1.5rem;
   margin: 0;
 }
@@ -696,7 +696,7 @@ a:hover .transform-arrow {
   align-self: flex-end;
 }
 
-.exclusives-section__img img{
+.exclusives-section__img img {
   width: 100%;
   height: 100%; 
   object-fit: contain;
@@ -782,11 +782,11 @@ a:hover .transform-arrow {
   cursor:pointer;
 }
 
-input::placeholder{
+input::placeholder {
   color: var(--black);
 }
 
-.email:focus{
+.email:focus {
   outline: none;
   background: var(--light-sage);
 }
